Fixed the burger menu hiding behind the swiper div. It is visible but not entirely functional.

--- a/Hotel_Management_System/public/CSS/Customer_Styles/customer_style.css
+++ b/Hotel_Management_System/public/CSS/Customer_Styles/customer_style.css
@@ -887,7 +887,7 @@
     display: flex;
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    /*background: #fff;*/
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
